feat:  Se actualizaron los estilos del diálogo de rechazo y la funcionalidad de los botones. Se añadieron estilos personalizados al botón «Rechazar» para mejorar su atractivo visual y la interacción del usuario, incluyendo estados de desplazamiento y deshabilitado.

--- a/src/app/shared/components/rechazo-dialog/rechazo-dialog.component.css
+++ b/src/app/shared/components/rechazo-dialog/rechazo-dialog.component.css
@@ -12,3 +12,17 @@ textarea {
 mat-dialog-actions {
   margin-top: 12px;
 }
+
+.btn-rechazar {
+  background-color: #00138C !important;
+  color: white !important;
+}
+
+.btn-rechazar:hover:not(:disabled) {
+  background-color: #0024b3 !important;
+}
+
+.btn-rechazar:disabled {
+  background-color: #ccc !important;
+  color: #666 !important;
+}
