--- a/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
+++ b/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
@@ -266,7 +266,10 @@
                   <mat-icon>check_circle</mat-icon>
                   <span class="estado-nombre">Aprobada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.APROBADA || 0 }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes?.APROBADA || 0 }}</div>
+                <div class="estado-porcentaje" *ngIf="data.resumen?.totalSolicitudes">
+                  {{ calcularPorcentajeEstado(data.estadosSolicitudes?.APROBADA || 0, data.resumen.totalSolicitudes) }}%
+                </div>
               </mat-card-content>
             </mat-card>
 
@@ -276,7 +279,10 @@
                   <mat-icon>send</mat-icon>
                   <span class="estado-nombre">Enviada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.ENVIADA || 0 }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes?.ENVIADA || 0 }}</div>
+                <div class="estado-porcentaje" *ngIf="data.resumen?.totalSolicitudes">
+                  {{ calcularPorcentajeEstado(data.estadosSolicitudes?.ENVIADA || 0, data.resumen.totalSolicitudes) }}%
+                </div>
               </mat-card-content>
             </mat-card>
 
@@ -286,7 +292,11 @@
                   <mat-icon>hourglass_empty</mat-icon>
                   <span class="estado-nombre">En Proceso</span>
                 </div>
-                <div class="estado-valor">{{ (data.estadosSolicitudes.APROBADA_FUNCIONARIO || 0) + (data.estadosSolicitudes.APROBADA_COORDINADOR || 0) }}</div>
+                <!-- ✅ ACTUALIZADO: Usar EN_PROCESO directamente, con fallback a suma de APROBADA_FUNCIONARIO + APROBADA_COORDINADOR para compatibilidad -->
+                <div class="estado-valor">{{ data.estadosSolicitudes?.EN_PROCESO ?? ((data.estadosSolicitudes?.APROBADA_FUNCIONARIO || 0) + (data.estadosSolicitudes?.APROBADA_COORDINADOR || 0)) }}</div>
+                <div class="estado-porcentaje" *ngIf="data.resumen?.totalSolicitudes">
+                  {{ calcularPorcentajeEstado(data.estadosSolicitudes?.EN_PROCESO ?? ((data.estadosSolicitudes?.APROBADA_FUNCIONARIO || 0) + (data.estadosSolicitudes?.APROBADA_COORDINADOR || 0)), data.resumen.totalSolicitudes) }}%
+                </div>
               </mat-card-content>
             </mat-card>
 
@@ -296,7 +306,10 @@
                   <mat-icon>cancel</mat-icon>
                   <span class="estado-nombre">Rechazada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.RECHAZADA || 0 }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes?.RECHAZADA || 0 }}</div>
+                <div class="estado-porcentaje" *ngIf="data.resumen?.totalSolicitudes">
+                  {{ calcularPorcentajeEstado(data.estadosSolicitudes?.RECHAZADA || 0, data.resumen.totalSolicitudes) }}%
+                </div>
               </mat-card-content>
             </mat-card>
           </div>
