--- a/src/app/pages/coordinador/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
+++ b/src/app/pages/coordinador/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.html
@@ -80,6 +80,14 @@
         </td>
       </ng-container>
 
+      <!-- Grupo -->
+      <ng-container matColumnDef="grupo">
+        <th mat-header-cell *matHeaderCellDef>Grupo</th>
+        <td mat-cell *matCellDef="let curso">
+          <span class="grupo-badge">{{ curso.grupo || 'A' }}</span>
+        </td>
+      </ng-container>
+
       <!-- Docente -->
       <ng-container matColumnDef="objDocente">
         <th mat-header-cell *matHeaderCellDef>Docente</th>
