--- a/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.css
+++ b/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.css
@@ -1729,7 +1729,7 @@ canvas {
 }
 
 .alerta-critica-card .acciones-urgentes ul li::before {
-  content: "⚠️";
+  content: "!";
   position: absolute;
   left: -1.5rem;
   top: 0;
