--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
@@ -4,6 +4,7 @@
   <app-required-docs
     [requiredFiles]="documentosRequeridos"
     [exclusiveFiles]="archivosExclusivos"
+    [optionalFiles]="optionalFiles"
     [archivos]="archivosActuales">
   </app-required-docs>
 
