--- a/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
+++ b/src/app/pages/estudiante/paz-salvo/paz-salvo.component.html
@@ -5,7 +5,8 @@
     [requiredFiles]="documentosRequeridos"
     [exclusiveFiles]="archivosExclusivos"
     [optionalFiles]="optionalFiles"
-    [archivos]="archivosActuales">
+    [archivos]="archivosActuales"
+    [programaEstudiante]="usuario?.objPrograma?.nombre || ''">
   </app-required-docs>
 
   <!-- Subir Archivos -->
@@ -21,6 +22,15 @@
       </app-file-upload>
 
       <div class="enviar-solicitud mt-4">
+        <div *ngIf="!puedeEnviar() && archivosActuales.length > 0" class="validacion-mensaje">
+          <mat-icon color="warn">warning</mat-icon>
+          <span>
+            <strong>Documentos faltantes:</strong>
+            <ul class="documentos-faltantes">
+              <li *ngFor="let doc of obtenerDocumentosFaltantes()">{{ doc }}</li>
+            </ul>
+          </span>
+        </div>
         <button mat-raised-button color="primary"
                 class="btn-enviar"
                 [disabled]="!puedeEnviar()"
